connection error when doing sharded cluster upgrade following recommended procedure

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.0-rc0
    • Affects Version/s: 2.5.4
    • Component/s: Admin, Sharding
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The recommended process for doing a sharded cluster version upgrade is:

      • Upgrade mongos (with --upgrade)
      • Upgrade shards
      • Upgrade config servers

      However, when running this for a 2.4 to 2.5 version upgrade, the following error is thrown when a client (e.g. a mongo process) attempts to run the authSchemaUpgradeStep command on the admin database.

      {
      	"ok" : 0,
      	"errmsg" : "SyncClusterConnection::update prepare failed:  localhost.mongodb.com:29001:10276 DBClientBase::findN: transport error: localhost.mongodb.com:29001 ns: admin.$cmd query: { resetError: 1 } localhost.mongodb.com:29002:10276 DBClientBase::findN: transport error: localhost.mongodb.com:29002 ns: admin.$cmd query: { resetError: 1 }",
      	"code" : 8005
      }
      

      However if the order is changed a bit:

      • Upgrade shards
      • Upgrade config servers
      • Upgrade mongos (with --upgrade)

      There are no issues upgrading in this order.

            Assignee:
            Randolph Tan
            Reporter:
            Adinoyi Omuya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: