SERVER-11982 connection error when doing sharded cluster upgrade following recommended procedure