src/mongo/s/request.cpp
@@ -77,35 +77,10 @@ namespace mongo {
 
         uassert( 13644 , "can't use 'local' database through mongos" , ! str::startsWith( getns() , "local." ) );
 
-        // TODO: Deprecated, keeping to preserve codepath for now
-        const string nsStr (getns()); // use in functions taking string rather than char*
-
-        _config = grid.getDBConfig( nsStr );
-
-        // TODO:  In general, throwing an exception when the cm doesn't exist is really annoying
-        if ( _config->isSharded( nsStr ) ) {
-            _chunkManager = _config->getChunkManagerIfExists( nsStr );
-        }
-        else {
-            _chunkManager.reset();
-        }
+        grid.getDBConfig( getns() );
 
         _m.header()->id = _id;
         _clientInfo->clearRequestInfo();
-    }
-
-    // Deprecated, will move to the strategy itself
-    Shard Request::primaryShard() const {
-        verify( _didInit );
-
-        if ( _chunkManager ) {
-            if ( _chunkManager->numChunks() > 1 )
-                throw UserException( 8060 , "can't call primaryShard on a sharded collection" );
-            return _chunkManager->findIntersectingChunk( _chunkManager->getShardKey().globalMin() )->getShard();
-        }
-        Shard s = _config->getShard( getns() );
-        uassert( 10194 ,  "can't call primaryShard on a sharded collection!" , s.ok() );
-        return s;
     }
 
     void Request::process( int attempt ) {
